--- a/index.html
+++ b/index.html
@@ -1,112 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-		<link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
 
-		<!-- Bootstrap CSS -->
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-			crossorigin="anonymous"
-		/>
-
-		<title>Конвертер валют на JavaScript</title>
-
-		<style>
-			.footer__link {
-				margin: 0 15px;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container pt-5 pb-5">
-			<div class="row justify-content-center">
-				<div class="col-6">
-					<!-- Content -->
-					<div class="card p-3">
-						<form>
-							<h1 class="h2 mb-4">Конвертер валют</h1>
-
-							<div class="courses">
-								<div class="course-item card card-body">
-									<div class="course-item-title">Курс USD</div>
-									<div class="course-item-value" data-value="USD">--.--</div>
-								</div>
-								<div class="course-item card card-body">
-									<div class="course-item-title">Курс EUR</div>
-									<div class="course-item-value" data-value="EUR">--.--</div>
-								</div>
-								<div class="course-item card card-body">
-									<div class="course-item-title">Курс GPB</div>
-									<div class="course-item-value" data-value="GBP">--.--</div>
-								</div>
-							</div>
-
-							<div class="row mb-1">
-								<div class="col">
-									<label for="name">Отдаю:</label>
-									<select
-										disabled
-										class="form-control"
-										id="exampleFormControlSelect1"
-									>
-										<option value="RUB" selected>RUB — Рубли</option>
-									</select>
-								</div>
-								<div class="col">
-									<label for="name">Получаю:</label>
-									<select
-										id="select"
-										class="form-control"
-										id="exampleFormControlSelect1"
-									>
-										<option value="USD">USD — Доллар США</option>
-										<option value="EUR">EUR — Евро</option>
-										<option value="GBP">GPB — Фунт стерлингов</option>
-									</select>
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col">
-									<input
-										id="input"
-										type="number"
-										class="form-control"
-										id="name"
-										autofocus
-									/>
-								</div>
-								<div class="col">
-									<input
-										id="result"
-										type="number"
-										class="form-control"
-										id="name"
-									/>
-								</div>
-							</div>
-						</form>
-					</div>
-					<!-- // Content -->
-				</div>
-				<!-- // col-6 -->
-			</div>
-			<!-- // row -->
-		</div>
-		<!-- // container -->
-
-		<footer class="footer d-flex justify-content-center">
-			<a class="footer__link" target="_blank" href="https://webcademy.ru/jscourse"
-				>Курс по JavaScript от ВебКадеми</a
-			>
-		</footer>
-
-		<script src="main.js"></script>
-	</body>
+    <title>Конвертер валют на JavaScript</title>
+  </head>
+  <body>
+    <div class="container">
+      <form class="convert-form">
+        <h1 class="convert-form__title">Конвертер валют</h1>
+        <div class="convert-form__content">
+          <div class="convert-form__courses courses">
+            <div class="courses__item course-item">
+              <div class="course-item__title item">Курс USD</div>
+              <div class="course-item__value" data-value="USD">--.--</div>
+            </div>
+            <div class="courses__item course-item">
+              <div class="course-item__title">Курс EUR</div>
+              <div class="course-item__value" data-value="EUR">--.--</div>
+            </div>
+            <div class="courses__item course-item">
+              <div class="course-item__title">Курс GBP</div>
+              <div class="course-item__value" data-value="GBP">--.--</div>
+            </div>
+          </div>
+          <div class="convert-form__items">
+            <div class="convert-form__inputs">
+              <div class="form-input form-input__input">
+                <span class="form-input__title">Отдаю:</span>
+                <span id="coinNameIn" class="form-input__coin">RUB - Рубль Россия</span>
+              </div>
+              <div class="coins__input input-coins">
+                <button class="input-coins__item input-coin--active" data-value="RUS">RUB</button>
+                <button class="input-coins__item" data-coin="EUR">EUR</button>
+                <button class="input-coins__item" data-coin="USD">USD</button>
+                <button class="input-coins__item" data-coin="GBP">GBP</button>
+              </div>
+              <input id="input" type="number" class="convert-form__intput convert-form__output-item" autofocus />
+            </div>
+            <div class="convert-form__outputs">
+              <div class="form-input form-input__output">
+                <span class="form-input__title">Получаю:</span>
+                <span id="coinNameOut" class="form-input__coin">USD — Доллар США</span>
+              </div>
+              <div class="coins__output output-coins">
+                <button class="output-coins__item" data-value="RUS">RUB</button>
+                <button class="output-coins__item" data-coin="EUR">EUR</button>
+                <button class="output-coins__item output-coin--active" data-coin="USD">USD</button>
+                <button class="output-coins__item" data-coin="GBP">GBP</button>
+              </div>
+              <div class="output-coins__footer">
+                <button class="output-coins__output-btn">
+                  Посчитать
+                </button>
+                <input id="result" type="number" class="convert-form__output convert-form__output-item" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
