Доработка дизайна для всех тем, доработка функционала переключения тем до конца

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="convert-form__items">
-            <div class="convert-form__inputs">
+            <div class="convert-form__inputs input-block">
               <div class="form-input form-input__input">
                 <span class="form-input__title">Отдаю:</span>
                 <span id="coinNameIn" class="form-input__coin">RUB - Рубль Россия</span>
@@ -71,9 +71,9 @@
                 <button class="input-coins__item coins__item" data-coin="USD">USD</button>
                 <button class="input-coins__item coins__item" data-coin="GBP">GBP</button>
               </div>
-              <input id="input" type="number" class="convert-form__intput convert-form__output-item" autofocus />
+              <input id="input" type="number" class="convert-form__input convert-form__output-item" autofocus />
             </div>
-            <div class="convert-form__outputs">
+            <div class="convert-form__outputs input-block">
               <div class="form-input form-input__output">
                 <span class="form-input__title">Получаю:</span>
                 <span id="coinNameOut" class="form-input__coin">USD — Доллар США</span>
