--- a/index.html
+++ b/index.html
@@ -8,62 +8,68 @@
     <link rel="preload" href="./fonts/OpenSans/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./fonts/OpenSans/OpenSans-LightItalic.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./fonts/OpenSans/OpenSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/font.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
     <title>Конвертер валют на JavaScript</title>
   </head>
-  <body>
+  <body class="no-scroll">
+    <div class="preloader-page" id="preloader"></div>
+    <script>
+      // Preloader
+
+      const preloader = document.getElementById("preloader")
+      const bodyEl = document.querySelector("body")
+
+      window.onload = function () {
+        if (preloader) {
+          preloader.classList.add("done")
+          bodyEl.classList.remove("no-scroll")
+        }
+      }
+    </script>
     <div class="container">
       <form class="convert-form">
         <div class="switcher-theme">
-          <button class="switcher-theme__open">
-            выбрать тему
-          </button>
+          <button class="switcher-theme__open lang-switcher-theme__open">выбрать тему</button>
           <ul class="vhidden switcher-theme__scheme-list scheme-list">
             <li class="scheme-list__item scheme-item">
-              <button class="scheme-item__btn" data-theme = "light">
-                светлая
-              </button>
+              <button class="scheme-item__btn lang-light-theme" data-theme="light">светлая</button>
             </li>
             <li class="scheme-list__item scheme-item">
-              <button class="scheme-item__btn" data-theme = "dark">
-                тёмная
-              </button>
+              <button class="scheme-item__btn lang-dark-theme" data-theme="dark">тёмная</button>
             </li>
             <li class="scheme-list__item scheme-item">
-              <button class="scheme-item__btn" data-theme = "moon">
-                лунная
-              </button>
+              <button class="scheme-item__btn lang-moon-theme" data-theme="moon">лунная</button>
             </li>
           </ul>
         </div>
         <div class="lang-bar">
-          <button class="lang-bar__btn">ru</button>
-          <button class="lang-bar__btn">en</button>
+          <button class="lang-bar__btn" data-lang="ru">ru</button>
+          <button class="lang-bar__btn" data-lang="en">en</button>
         </div>
-        <h1 class="convert-form__title">Конвертер валют</h1>
+        <h1 class="convert-form__title lang-title">Конвертер валют</h1>
         <div class="convert-form__content">
           <div class="convert-form__courses courses">
             <div class="courses__item course-item">
-              <div class="course-item__title item">Курс USD</div>
+              <div class="course-item__title lang-course-item__title-usd item">Курс USD</div>
               <div class="course-item__value" data-value="USD">--.--</div>
             </div>
             <div class="courses__item course-item">
-              <div class="course-item__title">Курс EUR</div>
+              <div class="course-item__title lang-course-item__title-eur">Курс EUR</div>
               <div class="course-item__value" data-value="EUR">--.--</div>
             </div>
             <div class="courses__item course-item">
-              <div class="course-item__title">Курс GBP</div>
+              <div class="course-item__title lang-course-item__title-gbp">Курс GBP</div>
               <div class="course-item__value" data-value="GBP">--.--</div>
             </div>
           </div>
           <div class="convert-form__items">
             <div class="convert-form__inputs input-block">
               <div class="form-input form-input__input">
-                <span class="form-input__title">Отдаю:</span>
-                <span id="coinNameIn" class="form-input__coin">RUB - Рубль Россия</span>
+                <span class="form-input__title lang-form-input__title">Отдаю:</span>
+                <span id="coinNameIn" class="form-input__coin lang-form-input__coin">RUB - Рубль Россия</span>
               </div>
               <div class="coins__input input-coins">
                 <button class="input-coins__item coins__item input-coin--active" data-value="RUS">RUB</button>
@@ -71,12 +77,12 @@
                 <button class="input-coins__item coins__item" data-coin="USD">USD</button>
                 <button class="input-coins__item coins__item" data-coin="GBP">GBP</button>
               </div>
-              <input id="input" type="number" class="convert-form__input convert-form__output-item" autofocus />
+              <input placeholder="Введите число" id="input" type="number" class="lang-placeholder-input convert-form__input convert-form__output-item" autofocus />
             </div>
             <div class="convert-form__outputs input-block">
               <div class="form-input form-input__output">
-                <span class="form-input__title">Получаю:</span>
-                <span id="coinNameOut" class="form-input__coin">USD — Доллар США</span>
+                <span class="form-output__title lang-form-output__title">Получаю:</span>
+                <span id="coinNameOut" class="form-output__coin lang-form-output__coin">USD — Доллар США</span>
               </div>
               <div class="coins__output output-coins">
                 <button class="output-coins__item coins__item" data-value="RUS">RUB</button>
@@ -85,7 +91,7 @@
                 <button class="output-coins__item coins__item" data-coin="GBP">GBP</button>
               </div>
               <div class="output-coins__footer">
-                <button class="output-coins__output-btn">Посчитать</button>
+                <button class="output-coins__output-btn lang-output-coins__output-btn">Посчитать</button>
                 <input id="result" type="number" class="convert-form__output convert-form__output-item" />
               </div>
             </div>
@@ -93,7 +99,8 @@
         </div>
       </form>
     </div>
-    <script src="js/theme.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/lang.js"></script>
+    <script src="./js/theme.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
