отключение outline у кнопок плюс некоторые стилистические правки

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     <div class="container">
       <form class="convert-form">
         <div class="switcher-theme">
-          <button class="switcher-theme__open lang-switcher-theme__open">выбрать тему</button>
+          <button class="switcher-theme__open lang-switcher-theme__open button">выбрать тему</button>
           <ul class="vhidden switcher-theme__scheme-list scheme-list">
             <li class="scheme-list__item scheme-item">
-              <button class="scheme-item__btn lang-light-theme" data-theme="light">светлая</button>
+              <button class="scheme-item__btn lang-light-theme button" data-theme="light">светлая</button>
             </li>
             <li class="scheme-list__item scheme-item">
-              <button class="scheme-item__btn lang-dark-theme" data-theme="dark">тёмная</button>
+              <button class="scheme-item__btn lang-dark-theme button" data-theme="dark">тёмная</button>
             </li>
             <li class="scheme-list__item scheme-item">
-              <button class="scheme-item__btn lang-moon-theme" data-theme="moon">лунная</button>
+              <button class="scheme-item__btn lang-moon-theme button" data-theme="moon">лунная</button>
             </li>
           </ul>
         </div>
         <div class="lang-bar">
-          <button class="lang-bar__btn" data-lang="ru">ru</button>
-          <button class="lang-bar__btn" data-lang="en">en</button>
+          <button class="lang-bar__btn button" data-lang="ru">ru</button>
+          <button class="lang-bar__btn button" data-lang="en">en</button>
         </div>
         <h1 class="convert-form__title lang-title">Конвертер валют</h1>
         <div class="convert-form__content">
@@ -72,10 +72,10 @@
                 <span id="coinNameIn" class="form-input__coin lang-form-input__coin">RUB - Рубль Россия</span>
               </div>
               <div class="coins__input input-coins">
-                <button class="input-coins__item coins__item input-coin--active" data-value="RUS">RUB</button>
-                <button class="input-coins__item coins__item" data-coin="EUR">EUR</button>
-                <button class="input-coins__item coins__item" data-coin="USD">USD</button>
-                <button class="input-coins__item coins__item" data-coin="GBP">GBP</button>
+                <button class="input-coins__item coins__item input-coin--active button" data-value="RUS">RUB</button>
+                <button class="input-coins__item coins__item button" data-coin="EUR">EUR</button>
+                <button class="input-coins__item coins__item button" data-coin="USD">USD</button>
+                <button class="input-coins__item coins__item button" data-coin="GBP">GBP</button>
               </div>
               <input placeholder="Введите число" id="input" type="number" class="lang-placeholder-input convert-form__input convert-form__output-item" autofocus />
             </div>
@@ -85,13 +85,13 @@
                 <span id="coinNameOut" class="form-output__coin lang-form-output__coin">USD — Доллар США</span>
               </div>
               <div class="coins__output output-coins">
-                <button class="output-coins__item coins__item" data-value="RUS">RUB</button>
-                <button class="output-coins__item coins__item" data-coin="EUR">EUR</button>
-                <button class="output-coins__item coins__item output-coin--active" data-coin="USD">USD</button>
-                <button class="output-coins__item coins__item" data-coin="GBP">GBP</button>
+                <button class="output-coins__item coins__item button" data-value="RUS">RUB</button>
+                <button class="output-coins__item coins__item button" data-coin="EUR">EUR</button>
+                <button class="output-coins__item coins__item output-coin--active button" data-coin="USD">USD</button>
+                <button class="output-coins__item coins__item button" data-coin="GBP">GBP</button>
               </div>
               <div class="output-coins__footer">
-                <button class="output-coins__output-btn lang-output-coins__output-btn">Посчитать</button>
+                <button class="output-coins__output-btn lang-output-coins__output-btn button">Посчитать</button>
                 <input id="result" type="number" class="convert-form__output convert-form__output-item" />
               </div>
             </div>
