--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="google" value="notranslate" />
     <link rel="preload" href="./fonts/OpenSans/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./fonts/OpenSans/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./fonts/OpenSans/OpenSans-LightItalic.woff2" as="font" type="font/woff2" crossorigin />
