Перевод вкладки браузера

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/font.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
-    <title>Конвертер валют на JavaScript</title>
+    <title class="lang-title-page">Конвертер валют на JavaScript</title>
   </head>
   <body class="no-scroll">
     <div class="preloader-page" id="preloader"></div>
