--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
+    <link rel="preload" href="./fonts/OpenSans/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./fonts/OpenSans/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./fonts/OpenSans/OpenSans-LightItalic.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./fonts/OpenSans/OpenSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="google" value="notranslate" />
     <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
@@ -12,10 +16,7 @@
     <link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#d5fafe" />
     <meta name="theme-color" content="#d5fafe" />
-    <link rel="preload" href="./fonts/OpenSans/OpenSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="./fonts/OpenSans/OpenSans-Light.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="./fonts/OpenSans/OpenSans-LightItalic.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="./fonts/OpenSans/OpenSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/font.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -107,6 +108,7 @@
         </div>
       </form>
     </div>
+    <script src="./js/negativeDigits.js"></script>
     <script src="./js/lang.js"></script>
     <script src="./js/theme.js"></script>
     <script src="./js/main.js"></script>
