Исправление бага когда при первом запуске программы при вводе данных в форму происходил сброс, - в форме была кнопка, которая была по умолчанию type=submit, что изменяло значение адресной строки браузера при клике на кнопку дающей результат, решение - написать кнопке type='button'

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <button class="output-coins__item coins__item button" data-coin="GBP">GBP</button>
               </div>
               <div class="output-coins__footer">
-                <button class="output-coins__output-btn lang-output-coins__output-btn button">Посчитать</button>
+                <button type="button" class="output-coins__output-btn lang-output-coins__output-btn button">Посчитать</button>
                 <input id="result" type="number" class="convert-form__output convert-form__output-item" />
               </div>
             </div>
